tests/Rules/Structure/Fixtures/valid/meta_viewport_max_scale_ok.html.twig
<html lang="en"><head><meta charset="utf-8"><title>T</title><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2.0"></head><body><main><h1>T</h1></main></body></html>
